k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: diabetes-dashboard-server-stage
  namespace: diabetes-dashboard-stage
spec:
  rules:
  - host: diabetes-stage.tgdev.xyz
    http:
      paths:
      - backend:
          service:
            name: diabetes-dashboard-server-stage
            port:
              number: 3000
        path: /api
        pathType: Prefix
  tls:
  - hosts:
    - diabetes-stage.tgdev.xyz
    secretName: diabetes-dashboard-stage-tls
