k8s/ingress-nrepl-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: diabetes-dashboard-server-nrepl
  namespace: diabetes-dashboard
spec:
  rules:
  - host: nrepl.diabetes.tgdev.xyz
    http:
      paths:
      - backend:
          service:
            name: diabetes-dashboard-server
            port:
              number: 12345
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nrepl.diabetes.tgdev.xyz
    secretName: diabetes-dashboard-nrepl-tls
